data/derived/fa15/progs/unify/prog1916.ml.out
Characters 418-421:
  | Logx (a)	    -> (log(eval(a)))
                             ^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
